# lerc-rs

./: CLAUDE.md  Cargo.toml  README.md
benches/: decode.rs
src/: bitmask.rs  bitstuffer.rs  error.rs  huffman.rs  lerc1.rs  lerc2.rs  lib.rs  lossless_float.rs  rle.rs  simd.rs  types.rs
tests/: reference.rs
