[package]
name = "lerc-rs"
version = "0.2.0"
edition = "2024"
authors = ["Andrew M. Henshaw <andrew@henshaw.us>",]

[lib]
name = "lerc"

[dependencies]

[dev-dependencies]
lerc-ref = { package = "lerc", version = "0.2.1" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "decode"
harness = false
